@@ -1,3 +1,8 @@
+2001-01-17  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* Source/GSXML.m|.h ([GSXMLDocument -stringValue]): dump document in a
+ 	string.
+
 Wed Jan 17 16:46:09 2001  Nicola Pero  <nicola@brainstorm.co.uk>
 
 	* GNUmakefile: Added PACKAGE_NEEDS_CONFIGURE and
